--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Project Name",
+  "name": "interplanetary-campus",
   "version": "0.0.1",
   "description": "A review time project",
   "main": "index.js",
@@ -13,13 +13,15 @@
     "skeleton"
   ],
   "dependencies": {
+    "axios": "^0.17.1",
     "body-parser": "^1.15.2",
     "chalk": "^1.1.3",
     "express": "^4.14.0",
     "pg": "^6.1.0",
+    "pg-hstore": "^2.3.2",
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
-    "react-redux": "^4.4.5",
+    "react-redux": "^4.4.8",
     "react-router-dom": "^4.1.1",
     "redux": "^3.6.0",
     "redux-logger": "^3.0.6",
@@ -29,10 +31,11 @@
   "devDependencies": {
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
+    "babel-preset-env": "^1.6.1",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
     "volleyball": "^1.4.1",
-    "webpack": "^3.5.5"
+    "webpack": "^3.10.0"
   }
 }
